--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 .circle_1{
     width: 50px;
     height: 50px;
-    background-color:white;
+    background-color:rgb(160, 160, 160);
     border-radius: 4px;
     animation: chase1 2s linear infinite;
     position: absolute;
